# cohen_gig

./: .gitignore  Cargo.toml
assets/: config.json  config_abbotsford.json  config_pre_tour_backup.json  config_sydney.json  presets.json
assets/map_mapper_projects/: SJ02-JOSH_COHEN-MM-01.mad  SJ02-JOSH_COHEN-MM5-01.mad
assets/midi_mappings/: NanoKontrol2.json
assets/presets/: acid-escher-hue-2.json  acid-escher-hue.json  acid-escher-red-2.json  acid-escher-red.json  android-pulse-envelopes.json  android-pulse-fast-envelopes.json  android-pulse-play-with-speed.json  android-start.json  bloom-gradient-play-wt-lines.json  bloom-gradient-plus-tunnel-prj.json  bloom-use-midi.json  butterflies.json  daydreaming-2-faster.json  daydreaming-2-gradient-mirror.json  daydreaming-blue-relax-no-midi.json  everything-in-place-play-with-l-r-mix.json  everything-in-place-relax-quite.json  everything-in-place-slow.json  exit-music-faster-gilmore-spiraling-2.json  exit-music-faster-gilmore-spiraling.json  exit-music-gilmore-spiraling-2.json  exit-music-gilmore-spiraling.json  ghost-blue-line-gradient-no-midi.json  ghost-blue-no-midi.json  ghost-blue-slow-pulse-no-midi.json  gilmore-spiraling-2.json  gilmore-spiraling.json  karma-police-linerelax.json  karma-police-play-with-speed.json  life-led-wall-press-space-cycle.json  line-gradient-radial-lines.json  line-relax-palette-remix.json  line-relax-palette.json  magenta-mirror-gradient.json  monochrome-escher-shifts.json  pulse-gradient.json  (+16 more)
cohen_gig/: Cargo.toml
cohen_gig/src/: audio_input.rs  audio_widgets.rs  blend_modes.rs  conf.rs  gui.rs  knob.rs  layout.rs  lerp.rs  mad_mapper.rs  main.rs  midi_osc.rs  mod_slider.rs  sacn_sender.rs  shader.rs  strip.rs  wash.rs
cohen_gig/src/midi/: learn.rs  mapping.rs  mod.rs
shader/: Cargo.toml
shader/src/: acid_gradient.rs  blend_modes.rs  blinky_circles.rs  bw_gradient.rs  colour_palettes.rs  escher_tilings.rs  helpers.rs  just_relax.rs  lib.rs  life_led_wall.rs  line_gradient.rs  particle_zoom.rs  shaders.rs  signals.rs  solid_hsv_colour.rs  solid_rgb_colour.rs  the_pulse.rs  tone_mapping.rs
shader/src/led_shaders/: acid_gradient.rs  bar_test.rs  blinky_circles.rs  bw_gradient.rs  colour_grid.rs  escher_tilings.rs  gilmore_acid.rs  gradient_bars.rs  hoop_loop.rs  imitation_riley.rs  just_relax.rs  life_led_wall.rs  light_pattern_generator.rs  line_gradient.rs  metafall.rs  mod.rs  particle_zoom.rs  radial_keta.rs  radial_lines.rs  row_test.rs  satis_spiraling.rs  spiral_intersect.rs  square_tunnel.rs  the_pulse.rs  tunnel_projection.rs  two_d_tiles.rs  vert_colour_gradient.rs
shader/src/wash_shaders/: colour_palettes.rs  mitch_wash.rs  mod.rs  shape_envelopes.rs
shader_shared/: Cargo.toml
src/: arch.rs  gui.rs  main.rs
(+8 files in other folders)
