[package]
name = "cohen_gig"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotlib = { git = "https://github.com/mitchmindtree/hotlib", branch = "master" }
libloading = "0.5"
nannou = "0.11"
sacn = "0.4"
shader_shared = { path = "../shader_shared" }
