[package]
name = "cohen_gig"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotlib = { git = "https://github.com/mitchmindtree/hotlib", branch = "master" }
libloading = "0.6.2"
nannou = "0.14"
nannou_osc = "0.1"
sacn = "0.4"
serde = "1"
shader_shared = { path = "../shader_shared" }
korg_nano_kontrol_2 = "0.1.1"
midir = "0.5"
