[package]
name = "shader"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]
name = "shader"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_core = "0.18"
pennereq = "0.3.1"
shader_shared = { path = "../shader_shared" }
korg_nano_kontrol_2 = "0.1.1"